--- a/Site/css/index.css
+++ b/Site/css/index.css
@@ -158,6 +158,7 @@ header img{
 
 }
 
+
 .active svg{
     width: 342px;
     align-self: center;
@@ -166,16 +167,17 @@ header img{
 .active h4{
     text-align: center;
     margin: 30px 0;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 16px;
+    line-height: 25px;
     font-weight: 400;
     width: 342px;
     height: 90px;
 }
 
 .active h3{
-    width: 342px;
+    width: 335px;
     height: 150px;
+    margin-top: 15px;
     margin-left: 20px;
     font-size: 20px;
     line-height: 30px;
