--- a/Site/css/index.css
+++ b/Site/css/index.css
@@ -16,6 +16,12 @@ header{
     top: 0px;
     display: flex;
 }
+.map-desk{
+    display: none;
+}
+.eclipse{
+    display: none;
+}
 
 header img{
     margin-top: 10px;
@@ -80,6 +86,9 @@ header img{
 .inicio{
     width: 100vw;
     height: 764px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 .inicio h1{
@@ -115,7 +124,7 @@ header img{
 
 }
 .ret{
-    position: absolute;
+    margin-top: 25px;
     width: 265px;
     height: 368px;
     left: 50px;
@@ -134,18 +143,15 @@ header img{
     width: 100vw;
     height: 1683px;
     color: white;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 #inicio-btn a{
    outline: none;
    -webkit-tap-highlight-color: transparent;
 }
 
-
-.active{
-    display: flex;
-    flex-direction: column;
-  
-}
 .active h2{
     padding-top: 50px;
     width: 344px;
@@ -186,6 +192,13 @@ header img{
 #ramo{
     position: absolute;
     right: 0;
+}
+#ramo-2{
+    position: absolute;
+    left: 0;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    display: none;
 }
 #ramo svg{
     width: 165px;
@@ -282,4 +295,210 @@ footer img{
 footer h5{
     margin-top: 10px;
     font-style: italic;
+}
+
+@media (min-width:600px){
+    .inicio h1{
+        margin: 30px auto 0 auto;
+    }
+    .inicio h4{
+        width: 436px;
+    }
+    .ret{
+        width: 302px;
+        height: 402px;
+    }
+    .active h2{
+        font-size: 45px;
+        width: 500px;
+    }
+    .active h4{
+        width: 500px;
+        font-size: 22px;
+    }
+    .active h3{
+        width: 500px;
+        font-size: 32px;
+    }
+    .map-info h3{
+        width: 100%;
+        text-align: center;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-logo{
+        margin-left: -60px;
+
+    }
+    footer h4{
+        width: 90%;
+    }
+}
+
+@media (min-width:900px){
+    .inicio h1{
+        width: 460px;
+        font-size: 56px;
+        margin: 10px auto 0 auto;
+    }
+    .inicio h4{
+        margin: 10px auto 25px auto;
+        font-size: 26px;
+    }
+   
+    .active h2{
+        font-size: 56px;
+        width: 800px;
+    }
+}
+
+@media (min-width:1200px) and (max-width:1800px){
+
+
+/*=============Inicio=============*/    
+    body{
+        overflow-x: hidden; 
+    }
+    .inicio{
+        display: grid;
+        grid-template-columns: 5% 36% 15% 36% 8%;
+        grid-template-rows: 9% 14% 11% 28% 18% 20%;
+        justify-content: center;
+       
+    }
+    .inicio h1,
+    #inicio-btn,
+    .inicio h4{
+        grid-column: 2/3;
+        z-index: 1;
+     
+    }
+    .inicio h1{
+        grid-row:3/4;
+    }
+    .inicio h4{
+        grid-row: 4/5;
+    }
+    #inicio-btn{
+        grid-row: 5/6;
+    }
+    .ret{
+        grid-column: 4/5;
+        grid-row: 2/6;
+        justify-self: center;
+        z-index: 1;
+        Width:478px;
+        Height:660px;
+    }
+    .eclipse{
+        display: block;
+        position: absolute;
+        left: 38%;
+        right: 0%;
+        top: -34%;
+        bottom: 10.75%;
+        background: #3F8428;
+        border-radius: 100%;
+        Width:1069px;
+        Height:946px;
+    }
+
+    /*=============Ativ=============*/
+    .active{
+        display: grid;
+        grid-template-columns: 3% 21% 5% 8% 21% 8% 5% 21% 4%;
+        grid-template-rows: 14% 15% 15% 39% 19%;
+        justify-content: center;
+        height: 850px;
+    }
+    .active h2{
+        grid-row: 1/2;
+        grid-column: 3/8;
+        width: 100%;
+        
+    }
+    .active h3{
+        grid-row: 2/4;
+        grid-column: 4/7;
+        width: 100%;
+        text-align: center;
+        margin: 0;
+    }
+    #btn-ativ{
+        grid-row: 3/4;
+        grid-column: 5/6;
+    }
+    #psico,#mass,#paint{
+        grid-row: 4/5;
+        align-self: end;
+    }
+    #psico{
+        grid-column-start: 2;
+        
+    }
+    #text-psico{
+        grid-column-start: 2;
+        grid-column-end: 4;
+        height: 100%;
+        width: 100%;
+    }
+    #mass{
+        grid-column-start: 8;
+    }
+    #text-paint{
+        grid-column: 5/7;
+        height: 100%;
+        width: 100%;
+    }
+    #paint,#text-paint{
+        grid-column-start: 5;
+    }
+    #text-mass{
+        grid-column: 8/10;
+        height: 100%;
+        width: 100%;
+    }
+    .active h4{
+        grid-row: 5/6;
+        font-size: 20px;
+    }
+    #ramo-2{
+        display: block;
+    }
+        /*=============Info=============*/
+    .map-info{
+        display: grid;
+        grid-template-columns: 5% 32% 7% 49%;
+        grid-template-rows: 14% 7% 17% 23% 38%;
+    }
+    .map-info h2{
+        grid-column:2/5;
+        text-align: center;
+    }
+    .map-info h3{
+        grid-row: 2/3;
+        grid-column:2/5;
+    }
+    .googlemap{
+        display: none;
+    }
+
+    .info{
+        grid-row: 5/6;
+        grid-column-start: 3;
+    }
+    .map-desk{
+        display: block;
+        grid-row: 3/5;
+        grid-column: 1/4;
+        width: 100%;
+    }
+    .map-desk iframe{
+        width: 100vw;
+    }
+    .info{}
+
 }
