--- a/Site/css/index.css
+++ b/Site/css/index.css
@@ -481,6 +481,7 @@ footer h5{
     .map-info h3{
         grid-row: 2/3;
         grid-column:2/5;
+        font-size: 25px;;
     }
     .googlemap{
         display: none;
