--- a/Site/css/index.css
+++ b/Site/css/index.css
@@ -473,6 +473,7 @@ footer h5{
         display: grid;
         grid-template-columns: 5% 34% 7% 49%;
         grid-template-rows: 14% 7% 17% 23% 38%;
+        justify-items: center;
     }
     .map-info h2{
         grid-column:2/5;
@@ -489,7 +490,7 @@ footer h5{
 
     .info{
         grid-row: 5/6;
-        grid-column-start: 3;
+        grid-column: 2/5;
     }
     .map-desk{
         display: block;
@@ -500,6 +501,9 @@ footer h5{
     .map-desk iframe{
         width: 100vw;
     }
-    .info{}
+    .info{
+        width: 600px;
+        margin: 0;
+    }
 
 }
