--- a/Site/css/index.css
+++ b/Site/css/index.css
@@ -5,6 +5,7 @@ html{
     outline: none;
     -webkit-tap-highlight-color: transparent;
     overflow-x :hidden;
+    font-family: Libre Basker;
 }
 a {
     text-decoration: none;
