--- a/Site/css/chas.css
+++ b/Site/css/chas.css
@@ -1,4 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,500;1,300&display=swap');
+:root{
+    --c1:color(#d5e6da);
+    --c2:color(#cfdcdb);
+    --c3:color(#c9dace);
+    --c4:color(#8fd8c4);
+    --c5:color(#739b7f);
+    --c6:color(#4e765a);
+
+    --z-1:z-index :1;
+    --z-10:z-index :10;
+    --z-100:z-index :100;
+}
 
 html{
     scroll-behavior: smooth;
@@ -27,6 +39,7 @@ body{
     font-family: 'Libre Basker';
     background-color: #f5f5f7;
 }
+
 .menu{
     list-style: none;
     gap: 1.8rem;
@@ -108,6 +121,8 @@ header{
     position: sticky;
     background-color: white;
     z-index: 4;
+    position: fixed;
+    
 }
 header img{
     margin-top: 10px;
@@ -167,171 +182,7 @@ header img{
     opacity:0.7;
     display: flex !important;
 }
-
-body{
-    display: grid;
-    grid-template-columns: 5vw 90vw 5vw;
-    grid-template-rows: 15vh 20vh 65vh;
-    justify-content: center;
-}
-
-/*=============Box=============*/
-
-#box{
-    grid-row: 2/3;
-    grid-column: 2/3;
-}
-.selectbox{
-    position: relative;
-}
-.select{
-    background: #fff;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, .16);
-    border-radius: 10px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    transition: .2s ease all;
-    margin-bottom: 30px;
-    padding: 30px;
-    position: relative;
-    z-index: 1;
-    border:  2px solid transparent;
-}
-
-.select.active, 
-.select:hover{
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.16);
-    border: 2px solid #213faf;
-}
-
-.select.active::before{
-    content: "";
-    display: block;
-    height: 0;
-    width: 0;
-    border-top: 15px solid #213faf;
-    border-right: 15px solid transparent;
-    border-left: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    position: absolute;
-    bottom: -30px;
-    left: calc(45%);
-}
-
-.select i {
-    font-size: 30px;
-    margin-left: 38px;
-    color: #213faf;
-    transition: .5s ease;
-}
-
-.select .titulo{
-    margin-bottom: 5px;
-    color: #000;
-    font-weight: 600;
-    font-size: 25px;
-}
-
-.opcoes{
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.16);
-    max-height: 480px;
-    overflow: auto;
-    z-index: 100;
-    margin-left: 10px;
-    display: none;
-    overflow-x: hidden;
-    transition: display 5s ease-in-out all;
-}
-
-.opcoes.active{
-    display: block;
-}
-
-.conteudo-opcao{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    transition: 1s ease all;
-
-}
-
-.conteudo-opcao img{
-    width: 60px;
-    height: 60px;
-    margin-right: 30px;
-}
-
-.up{
-    transform: rotate(180deg);
-}
-
-.prof{
-    grid-row: 3/4;
-    grid-column: 2/3;
-}
-.prof__psico,
-.prof__pintura,
-.prof__mass,
-.prof__mod,.prof__yoga,
-.prof__danca,.prof__const,.prof__acun,.prof__canto
-{
-    display: none;
-}
-.prof-titulo{
-    font-size: 32px;
-    margin: 0.8rem 0;
-    color: #343D33;
-}
-
-.prof-desc{
-    font-size: 22px;
-    color: #697568;
-}
-
-.profissional{
-    background-color: #fff;
-    border-radius: 18px;
-    padding: 2rem;
-    margin-bottom: 1.5rem;
-}
-
-.profissional img{
-    width:200px ;
-    border-radius: 50%;
-}
-
-.show-prof{
-    display: block;
-}
-
 @media screen and (min-width:1200px) {
-   .conteudo-opcao{
-    justify-content: center;
-   }
-    .textos{
-        font-size: 25px;
-    }
-   
-    #select{
-       justify-content: center;
-   }
-     li > a{
-       color:#697568;
-     }
-    .opcao-p{
-        flex-wrap: wrap;
-        display: none;
-        }
-    .profissional{
-        margin-right: 1rem;
-    }
-    .show-prof{
-        display: flex;
-    }
     .menu{
         left: 0;
         display: flex;
@@ -343,18 +194,95 @@ body{
         border: 0;
         height: 5vh;
     }
-  
     #btn-menu{
         display: none;
     }
-    
-    body{
-        grid-template-columns: 5vw 70vw 25vw 5vw;    
+    li > a{
+        color:#697568;
     }
-    #box{
+    .grid{
+        margin-left: 1rem;
+        margin-right: 1rem;
+        padding: 1rem;
+    }
+
+/*1 sec*/
+    #sec-cha-1{
+        display: grid;
+        height: calc(99vh - 80px);
+        grid-template-columns: 20% 8% 30% 11% 31%;
+        grid-template-rows: 28% 11% 12% 18% 31%;
+        margin-top: 80px;
+    }
+    #l-side-img-sec1{
+        background-color: rgba(54, 150, 54, 0.63);
+        grid-column: 1/2;
+        grid-row: 1/6;
+    }
+    .text{
+        grid-row: 2/5;
         grid-column: 3/4;
     }
-    .prof{
-        grid-column: 2/4;
+    #r-side-1-img-sec1{
+        grid-column: 5/6;
+        grid-row: 1/2;
+        background-color: blue;
     }
+    #r-side-2-img-sec1{
+        grid-column: 5/6;
+        grid-row: 3/6;
+        background-color: red;
+    }
+    .titulo-cha{
+        font-size: 3rem;
+    }
+    .desc-cha{
+        font-size: 1.3rem;
+    }
+    .texto-cha{
+        font-size: 1rem;
+    }
+
+
+    #sec-cha-2{
+        display: grid;
+        height: calc(99vh - 80px);
+        grid-template-columns: 13% 12% 39% 36%;
+        grid-template-rows: 30% 11% 18% 9% 32%;
+    }
+
+    #l-side-top-sec2{
+        grid-row: 1/2;
+        grid-column: 1/3;
+        background-color: red;
+    }
+    #l-side-bottom-sec2{
+        grid-row: 5/6;
+        grid-column: 1/3;
+        background-color: rgb(88, 228, 76);
+    }
+    #r-side-sec2{
+        grid-row: 1/6;
+        grid-column: 4/5;
+        background-color: #4c5be4
+    }
+
+
+    #sec-cha-3{
+        display: grid;
+        height: calc(99vh - 80px);
+        grid-template-columns: 23% 20% 35% 22%;
+        grid-template-rows: 28% 9% 28% 11% 16% 8%;
+    }
+    #l-side-sec3{
+        grid-column: 1/2;
+        grid-row: 1/7;
+        background-color: black;
+    }
+    #r-side-bottom-sec3{
+        grid-column: 4/5;
+        grid-row: 3/6;
+        background-color: purple;
+    }
+
 }
